--- a/app/views/pages/perfil1.ejs
+++ b/app/views/pages/perfil1.ejs
@@ -205,6 +205,46 @@
                 <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
                 <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
             </article>
+            <article class="product-card" data-category="saias">
+                <img src="imagens/cropped flor.png" alt="Saia Jeans">
+                <h2>Saia Jeans Midi</h2>
+                <p class="price">R$45,00</p>
+                <p class="Descrição">ou em 3x de R$15,00</p>
+                <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
+                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            </article>
+            <article class="product-card" data-category="calcas">
+                <img src="imagens/cropped cinza.png" alt="Calça Preta">
+                <h2>Calça Social Preta</h2>
+                <p class="price">R$55,00</p>
+                <p class="Descrição">ou em 4x de R$13,75</p>
+                <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
+                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            </article>
+            <article class="product-card" data-category="acessorios">
+                <img src="imagens/tennis.png" alt="Bolsa Marrom">
+                <h2>Bolsa de Couro Marrom</h2>
+                <p class="price">R$80,00</p>
+                <p class="Descrição">ou em 5x de R$16,00</p>
+                <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
+                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            </article>
+            <article class="product-card" data-category="vestidos">
+                <img src="imagens/vestido preto.png" alt="Vestido Floral">
+                <h2>Vestido Floral Midi</h2>
+                <p class="price">R$65,00</p>
+                <p class="Descrição">ou em 4x de R$16,25</p>
+                <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
+                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            </article>
+            <article class="product-card" data-category="casacos">
+                <img src="imagens/cropped rosa.png" alt="Jaqueta Jeans">
+                <h2>Jaqueta Jeans Clássica</h2>
+                <p class="price">R$75,00</p>
+                <p class="Descrição">ou em 5x de R$15,00</p>
+                <button class="favorite"><img src="imagens/coraçao de fav2.png"></button>
+                <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+            </article>
         </section>
 
     </main>
