--- a/app/views/pages/produto2.ejs
+++ b/app/views/pages/produto2.ejs
@@ -127,8 +127,8 @@
             </button>
             
             <nav class="breadcrumb">
-                <a href="#">Home</a> >
-                <a href="#">Filtros</a> >
+                <a href="/index">Home</a> >
+                <a href="/categorias">Filtros</a> >
                 <a href="#">Vestidos</a>
             </nav>
 
@@ -209,7 +209,7 @@
                     <br>
                     <p class="price">R$15,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'anel-prata')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png"class="img-sacola"></button>
+                    <button class="cart"><img src="imagens/imagens/sacola.png"class="img-sacola"></button>
                 </article>
               </section>
 
@@ -219,7 +219,7 @@
                     <h2>Bracelete</h2>
                     <p class="price">R$19,99 <br>ou em 2x R$10,00</p>
                     <button class="favorite" onclick="toggleFavorite(this, 'bracelete')"><img src="imagens/coraçao de fav2.png"></button>
-                    <button class="cart"><img src="imagens/sacola.png" class="img-sacola"></button>
+                    <button class="cart"><img src="imagens/imagens/sacola.png" class="img-sacola"></button>
                 </article>
         
                 <article class="product-card">
