--- a/app/views/pages/homecomprador.ejs
+++ b/app/views/pages/homecomprador.ejs
@@ -38,7 +38,7 @@
             <% if (typeof autenticado !== 'undefined' && autenticado) { %>
               <a href="/perfilcliente"><img src="<%= autenticado.imagem || 'imagens/imagem sem cadastro.avif' %>" class="maria"></a>
             <% } else { %>
-              <a href="/menu"><img src="imagens/icone sem cadastro.png" class="maria"></a>
+              <a href="/menu"><img src="imagem/perfil/perfil vintelo.png" class="maria"></a>
             <% } %>
           </li>
           <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho"></a></li>
@@ -65,7 +65,7 @@
             <li>
               <a href="/criarbrecho">
                 <section class="profile-section">
-                  <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/imagem sem cadastro.avif' %>" alt="Perfil" class="profile-pic">
+                  <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagem/perfil/perfil vintelo.png' %>" alt="Perfil" class="profile-pic">
                   <section class="profile-info">
                     <h2><%= autenticado && autenticado.nome ? autenticado.nome : 'Usuário' %></h2>
                   </section>
@@ -109,7 +109,7 @@
         <img src="imagens/logo.png" class="logo">
         <a href="/menu">
           <div class="profile-container">
-            <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagens/carrinho.png' %>" alt="Foto de Maria" class="profile-pic" />
+            <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : 'imagem/perfil/perfil vintelo.png' %>" alt="Foto de Maria" class="profile-pic" />
           </div>
         </a>
       </nav>
