--- a/app/views/pages/perfilcliente.ejs
+++ b/app/views/pages/perfilcliente.ejs
@@ -32,7 +32,7 @@
                 </form>
                 <ul>
                     <li><a href="/sacola1"><img src="imagens/icone saco.png" class="img-tamanho" alt="Sacola"></a></li>
-                    <li><a href="/perfilcliente"><img src="<%= (typeof usuario !== 'undefined' && usuario && usuario.imagem) ? '/' + usuario.imagem : 'imagens/imagem sem cadastro.avif' %>" class="maria" alt="Perfil"></a></li>
+                    <li><a href="/perfilcliente"><img src="<%= (typeof usuario !== 'undefined' && usuario && usuario.imagem) ? '/' + usuario.imagem : 'imagem/perfil/perfil vintelo.png' %>" class="maria" alt="Perfil"></a></li>
                     <li><a href="/favoritos"><img src="imagens/icone coraçao.png" class="img-tamanho" alt="Favoritos"></a></li>
                 </ul>
             </section>
@@ -63,7 +63,7 @@
                 <section class="profile-section">
                     <section class="profile-header">
                         <section class="profile-photo">
-                            <img id="profile-img" src="<%= (typeof usuario !== 'undefined' && usuario && usuario.imagem) ? '/' + usuario.imagem : 'imagens/imagem sem cadastro.avif' %>" alt="Foto do perfil">
+                            <img id="profile-img" src="<%= (typeof usuario !== 'undefined' && usuario && usuario.imagem) ? '/' + usuario.imagem : 'imagem/perfil/perfil vintelo.png' %>" alt="Foto do perfil">
                             <button class="photo-edit-btn" onclick="editProfilePhoto()">
                                 <span>+</span>
                             </button>
