--- a/app/views/pages/perfilvender.ejs
+++ b/app/views/pages/perfilvender.ejs
@@ -33,7 +33,7 @@
                     </form>
                     <ul>
                         <li><a href="#" ></a><img src="imagens/icone saco.png" class="img-tamanho"> </li>
-                        <li><a href="/menuvendedor" ><img src="<%= brecho && brecho.imagem ? brecho.imagem : 'imagens/imagem sem cadastro.avif' %>" class="img-tamanho"></a></li>
+                        <li><a href="/menuvendedor" ><img src="<%= brecho && brecho.imagem ? brecho.imagem : 'imagem/perfil/perfil vintelo.png' %>" class="img-tamanho"></a></li>
                         <li><a href="#" ><img src="imagens/icone coraçao.png" class="img-tamanho"> </a></li>
                     </ul>
                 </section>
@@ -58,7 +58,7 @@
     <main>
         <section class="header-container">
             <section class="profile-section">
-                <img src="<%= brecho && brecho.imagem ? brecho.imagem : 'imagens/imagem sem cadastro.avif' %>" alt="<%= brecho ? brecho.nome : 'Loja' %>" class="profile-img">
+                <img src="<%= brecho && brecho.imagem ? brecho.imagem : 'imagem/perfil/perfil vintelo.png' %>" alt="<%= brecho ? brecho.nome : 'Loja' %>" class="profile-img">
                 <section class="profile-info">
                     <h1><%= brecho ? brecho.nome : 'Nome do Brechó' %></h1>
                     <span class="rating"><%= brecho && brecho.avaliacao ? brecho.avaliacao : '0.0' %> ★★★★★</span>
