--- a/app/views/pages/index.ejs
+++ b/app/views/pages/index.ejs
@@ -448,7 +448,7 @@
         </section>
         <!--                                        Seção de artigos                                               -->
         <section class="titulo-artigo-section">
-          <span class="garimpe-text">Tendências</span><br>
+          <span class="garimpe-text">Tendências na</span><br>
           <span class="vintelo-text">Vintélo</span>
         </section>
         <section class="artigos">
@@ -458,7 +458,7 @@
           <h3 class="artigo-text">BOSS | MILÃO | VERÃO |</h3>
           <br>
             <p class="texto-esquerda">
-          <a href="/cadastro" class="link-preto">ver mais</a>
+          <a href="/cadastro" class="link-preto">Ler agora</a>
           </p>
         </section>
         
